Add step that allows to modularize dependant artifacts so jlink can be used. Also, guard jlink (and jpackage) by a lock since it is not thread safe internally.